# rust-ebpf-xdp-agent

./: Cargo.toml  README.md
docs/: 用 Rust + eBPF + XDP 实现一个简易但实用的 DDoS 防护网络监控 Agent.md
rust-xdp-ddos-agent/: Cargo.toml
rust-xdp-ddos-agent-common/: Cargo.toml
rust-xdp-ddos-agent-common/src/: lib.rs
rust-xdp-ddos-agent-ebpf/: Cargo.toml
rust-xdp-ddos-agent-ebpf/src/: main.rs
rust-xdp-ddos-agent/src/: main.rs
scripts/: dev.sh  log.sh  restart.sh  start.sh  status.sh  stop.sh
xtask/src/: main.rs
