[workspace]
resolver = "2"
members = ["xtask", "rust-xdp-ddos-agent", "rust-xdp-ddos-agent-common"]

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
