[package]
name = "rust-xdp-ddos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rust-xdp-ddos-agent-common = { path = "../rust-xdp-ddos-agent-common", features = ["user"] }

[[bin]]
name = "rust-xdp-ddos-agent"
path = "src/main.rs"
